<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lakibeam1</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="randy@todo.todo">randy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>diagnostic_updater</depend>
  <!-- Removed ROS1-only deps: dynamic_reconfigure and message_generation -->
  <depend>tf2</depend>
  



  <!-- PCL not used by this package; removed to avoid rosdep lookup errors -->


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
